add hadoop client role